// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/actionbuttonv2 should render 1`] = `
<button
  aria-label="title"
  className="msla-action-button-v2"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  tabIndex={0}
>
  <svg
    fill="none"
    height="14"
    viewBox="0 0 14 14"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.65625 6.34375H14V7.65625H7.65625V14H6.34375V7.65625H0V6.34375H6.34375V0H7.65625V6.34375Z"
      fill="#0078D4"
    />
  </svg>
</button>
`;

exports[`lib/actionbuttonv2 should render disabled 1`] = `
<button
  aria-label="title"
  className="msla-action-button-v2"
  disabled={true}
  onBlur={[Function]}
  onFocus={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  tabIndex={0}
>
  <svg
    fill="none"
    height="14"
    viewBox="0 0 14 14"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.65625 6.34375H14V7.65625H7.65625V14H6.34375V7.65625H0V6.34375H6.34375V0H7.65625V6.34375Z"
      fill="#0078D4"
    />
  </svg>
</button>
`;

exports[`lib/actionbuttonv2 should render with a CSS class 1`] = `
<button
  aria-label="title"
  className="msla-action-button-v2 class-name"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  tabIndex={0}
>
  <svg
    fill="none"
    height="14"
    viewBox="0 0 14 14"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.65625 6.34375H14V7.65625H7.65625V14H6.34375V7.65625H0V6.34375H6.34375V0H7.65625V6.34375Z"
      fill="#0078D4"
    />
  </svg>
</button>
`;

exports[`lib/actionbuttonv2 should render with a ref 1`] = `
<button
  aria-label="title"
  className="msla-action-button-v2"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  tabIndex={0}
>
  <svg
    fill="none"
    height="14"
    viewBox="0 0 14 14"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.65625 6.34375H14V7.65625H7.65625V14H6.34375V7.65625H0V6.34375H6.34375V0H7.65625V6.34375Z"
      fill="#0078D4"
    />
  </svg>
</button>
`;
